# Data-Engineering

./: .gitignore  README.md
.github/workflows/: ci.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  tasks.json
changelogs/: 2025-06-19-task-1-implement-local-s3-foundation.md
coding_updates/: coding_updates_1.md
demo-catalog-site/: index.html
demo-catalog-site/static/: app.js  styles.css
demo-catalog-site/tables/: data_quality_metrics.html  inventory.html  neural_signals.html  transactions.html  user_events.html  users.html
docs/api_reference/: Catalog.md  PartitioningScheme.md
docs/chat_logs/: 01-2025-06-19-refactor-cursor.md
docs/how-to/: setup-taskmaster.md  upgrade_dev_to_prod.md
docs/research/: 01-2025-06-20-rust-writer-polars-versioning.md  02-2025-06-20-rust-writer-polars copy.md  03-2025-06-20-rust-writer-polars.md  (+1 more)
neuralake/: Makefile  NeuralakePypi.md  ONBOARDING.md  README.md  docker-compose.yml  my_catalog.py  my_catalog_production.py  my_tables.py  my_tables_production.py  production_verification.py  pyproject.toml  query_data.py  query_data_production.py  setup_minio.sh
neuralake/catalog-site/: api-reference.html  index.html
neuralake/catalog-site/static/: styles.css
neuralake/data/: parts.parquet
neuralake/demo-catalog-site/: api-reference.html  index.html  search-index.json
neuralake/demo-catalog-site/static/: app.js
neuralake/demo-catalog-site/tables/: data_quality_metrics.html  inventory.html  neural_signals.html  transactions.html  user_events.html  users.html
neuralake/rust-writer/: Cargo.toml
neuralake/rust-writer/src/: compaction.rs  config.rs  main.rs  vacuum.rs  writer.rs
neuralake/rust-writer/tests/: common.rs  surgical_strike.rs
neuralake/scripts/: create_sample_data.py  demo_complete_workflow.py  generate_api_docs.py  generate_catalog_site.py  generate_catalog_site_with_demo.py  generate_demo_catalog_site.py  generate_neuralink_catalog_site.py  lint.py  production_verification.py  setup_local_environment.py  streaming_test_logger.py  test_delta_lake.py  test_streaming_ingestion.py  upload_sample_data_to_minio.py
neuralake/scripts/catalog-site/: api-reference.html  index.html  search-index.json
neuralake/scripts/catalog-site/tables/: neural_signals.html  transactions.html  user_events.html  users.html
neuralake/scripts/neuralink-catalog-site/: api-reference.html  index.html  search-index.json
neuralake/scripts/neuralink-catalog-site/tables/: behavioral_metrics.html  motor_predictions.html  neural_signals.html  neural_stream_delta.html  patient_sessions.html  spike_events.html  system_telemetry.html
neuralake/src/: catalog_core.py  config.py  delta_config.py  delta_tables.py  demo_catalog.py  my_catalog.py  my_tables.py  query_data.py  ssg.py  static_site_generator.py
neuralake/streaming-test-results/: latest
neuralake/streaming-test-results/streaming-20250619-233213/: streaming_results.json
neuralake/streaming-test-results/streaming-20250619-233330/: streaming_metrics.csv  summary_report.md
neuralake/tests/: test_catalog_core.py
(+40 files in other folders)
