[package]
name = "surgical_strike_writer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Data & Storage Libraries
polars = { version = "=0.48.1", features = ["lazy", "temporal", "serde"] }
deltalake = { version = "=0.26.2", features = ["s3"] }

# AWS SDK for DynamoDB locking
aws-config = "=1.8.0"
aws-sdk-dynamodb = "=1.80.0"
aws-sdk-s3 = "=1.93.0"

# Async Runtime & Utilities
tokio = { version = "=1.45.1", features = ["full"] }
futures = "=0.3.30"
anyhow = "=1.0.86"
thiserror = "=1.0.61"
log = "=0.4.22"
env_logger = "=0.11.3"

# CLI and Configuration
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Benchmarking (Optional)
criterion = { version = "0.5", features = ["async_tokio"], optional = true }

[dev-dependencies]
# Testing Infrastructure
testcontainers = "=0.22.0"
tempfile = "=3.10.1"
utime = "=0.3.1" # For modifying file timestamps in the vacuum test

[features]
bench = ["criterion"] 